<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected_country">Selected Country</string>
    <string name="selected_category">Selected Ctegory</string>
    <string name="category_hint">(at least 3 category )</string>
    <string name="next">Next</string>
    <string name="empty_category_message">please selecte favourite category</string>
    <string name="loading">loading</string>
    <string name="retry">try aging</string>
    <string name="no_results">no result</string>
    <string name="favorite">favourite</string>
    <string name="content_description_favorite">fav_screen</string>
    <string name="search">search</string>
    <string name="content_description_search">search_screen</string>
    //category
    <string name="general">general</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">sports</string>
    <string name="apply">apply</string>
    <string name="search_hint">search here</string>
    // countries
<!--    <string name="general">general</string>-->
<!--    <string name="business">business</string>-->
<!--    <string name="entertainment">entertainment</string>-->
<!--    <string name="health">health</string>-->
<!--    <string name="science">science</string>-->
<!--    <string name="sports">sports</string>-->
<!--    <string name="technology">sports</string>-->
<!--    -->

    <string-array name="countries_name_array">
        <item>Egypt</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Austria</item>
        <item>Aruba</item>
        <item>Spain</item>
        <item>Argentina</item>


    </string-array>

    <string-array name="category_name_array">
        <item>general</item>
        <item>business</item>
        <item>entertainment</item>
        <item>health</item>
        <item>science</item>
        <item>sports</item>
        <item>technology</item>


    </string-array>


</resources>