<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DAD9D9"
     >


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/selected_category"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/scroolViewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupCategory"
                    android:layout_width="match_parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:checkedChip="@id/general_chip"
                    app:singleSelection="true"
                    android:layout_height="match_parent">


                    <com.google.android.material.chip.Chip
                        android:id="@+id/general_chip"
                        style="@style/CustomChipStyle"
                        android:text="@string/general"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/health_chip"
                        style="@style/CustomChipStyle"
                        android:text="@string/health"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/sports_chip"
                        style="@style/CustomChipStyle"
                        android:text="@string/sports"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/science_chip"
                        style="@style/CustomChipStyle"
                        android:text="@string/science"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/entertainment_chip"
                        style="@style/CustomChipStyle"
                        android:text="@string/entertainment"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <com.google.android.material.chip.Chip
                        android:id="@+id/technology_chip"
                        style="@style/CustomChipStyle"
                        android:text="@string/technology"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <com.google.android.material.chip.Chip
                        android:id="@+id/business_chip"
                        style="@style/CustomChipStyle"
                        android:text="@string/business"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_search_select_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:text="@string/selected_country"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroolViewCategory" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/search_spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_search_select_country"
            />






        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/apply"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:cornerRadius="16dp"
            android:backgroundTint="@color/category_back_color"
            android:layout_marginHorizontal="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_spinner_country" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>