<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_selected_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/selected_country"
            android:textSize="16sp"
            android:layout_marginTop="24dp" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_selected_country"
            />




        <TextView
            android:id="@+id/tv_select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            android:text="@string/selected_category"
            android:textSize="16sp"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_select_category"
            app:layout_constraintTop_toTopOf="@id/tv_select_category"
            app:layout_constraintBottom_toBottomOf="@id/tv_select_category"
            android:text="@string/category_hint"
            android:textSize="12sp"
            android:layout_marginStart="4dp"

            />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_selected_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_selected_category"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_select_category"

                />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_selected_category"
            tools:listitem="@layout/item_category"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next"
            android:textSize="16sp"
            android:textAllCaps="false"
           android:layout_marginVertical="32dp"
            android:layout_marginHorizontal="64dp"
            android:paddingVertical="16dp"
             app:cornerRadius="16dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>